Bug 214549 Warnings in nsMenuBarX.cpp r=floppymoose sr=tor