widget/src/cocoa/nsMenuBarX.cpp
@@ -61,7 +61,6 @@
 #include <Menus.h>
 #include <TextUtils.h>
 #include <Balloons.h>
-#include <Traps.h>
 #include <Resources.h>
 #include <Appearance.h>
 #include <Gestalt.h>
@@ -84,7 +83,11 @@ EventHandlerUPP nsMenuBarX::sCommandEventHandler = nsnull;
 // nsMenuBarX constructor
 //
 nsMenuBarX::nsMenuBarX()
-  : mNumMenus(0), mParent(nsnull), mIsMenuBarAdded(PR_FALSE), mDocument(nsnull), mCurrentCommandID(1)
+  : mCurrentCommandID(1),
+    mNumMenus(0),
+    mParent(nsnull),
+    mIsMenuBarAdded(PR_FALSE),
+    mDocument(nsnull)
 {
   OSStatus status = ::CreateNewMenu(0, 0, &mRootMenu);
   NS_ASSERTION(status == noErr, "nsMenuBarX::nsMenuBarX:  creation of root menu failed.");
@@ -567,7 +570,7 @@ NS_METHOD nsMenuBarX::AddMenu(nsIMenu * aMenu)
       // won't overwrite the apple menu by reusing the ID.
       mNumMenus = 1;
       ::InsertMenuItem(mRootMenu, "\pA", mNumMenus);
-      OSStatus status = ::SetMenuItemHierarchicalMenu(mRootMenu, 1, sAppleMenu);
+      ::SetMenuItemHierarchicalMenu(mRootMenu, 1, sAppleMenu);
     }
   }
 
